force-app/main/default/objects/ssot__CaseRelatedIssue__dlm/fields/ssot__CaseId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseId__c</fullName>
    <label>Case</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CaseId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>