force-app/main/default/objects/ssot__CaseRelatedIssue__dlm/fields/ssot__CaseRelatedIssue_CaseId_map_Case_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseRelatedIssue_CaseId_map_Case_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseRelatedIssue_CaseId_map_Case_Id_N_1</label>
    <referenceTo>ssot__Case__dlm</referenceTo>
    <relationshipLabel>CaseRelatedIssue_CaseId_map_Case_Id_N_1</relationshipLabel>
    <relationshipName>CaseRelatedIssue_CaseId_map_Case_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>