force-app/main/default/objects/ssot__CaseRelatedIssue__dlm/fields/ssot__rel_1702009447119_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1702009447119_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseRelatedIssue_RelatedIssueId_map__rel</label>
    <referenceTo>ssot__Problem__dlm</referenceTo>
    <relationshipLabel>CaseRelatedIssue_RelatedIssueId_map__rel</relationshipLabel>
    <relationshipName>rel_1702009447119_end</relationshipName>
    <type>Lookup</type>
</CustomField>